# tokentube

./: .gitignore  .sparkleshare  .travis.yml  Makefile.am  Makefile.in  README.md  README.txt  SparkleShare.txt  aclocal.m4  configure  configure.ac  configure.scan  index.html  params.json
DOCUMENTATION/: CRYPTOGRAPHY.txt  DEBUGGING.txt  DESIGN.txt  HACKING.txt  MOTIVATION.txt
ThreatDragonModels/Test/: Test.json
conf/: boot_tokentube_crypto.conf  boot_tokentube_pba.conf  boot_tokentube_pba_otp.conf  boot_tokentube_pba_splash_english.txt  boot_tokentube_pba_sso.conf  boot_tokentube_pba_user.conf  boot_tokentube_sso.conf  etc_pam.d_tokentube  etc_tokentube_conf.d_plugin-exec.conf  etc_tokentube_conf.d_plugin-helpdesk.conf  etc_tokentube_conf.d_plugin-lua.conf  etc_tokentube_conf.d_plugin-python.conf  etc_tokentube_sso.conf  etc_tokentube_sso_ssod.conf  etc_tokentube_tokentube.conf  usr_lib_tokentube_libexec_python_storage-load.py  usr_lib_tokentube_libexec_python_storage-save.py
debian/: README.Debian  changelog  control  copyright  gbp.conf  rules  tokentube-sso-lightdm.postinst  tokentube-sso-lightdm.postrm  tokentube-ssod.conffiles  tokentube-ssod.postinst  tokentube-ssod.postrm  tokentube.conffiles  tokentube.config  tokentube.postinst  tokentube.postrm  tokentube.prerm  tokentube.templates
debian/conf/tokentube-sso-lightdm/: etc_lightdm_lightdm.conf.d_99-tokentube-sso-greeter.conf  usr_share_xgreeters_tokentube-sso-lightdm-greeter.desktop
debian/po/: POTFILES.in  templates.1po  templates.pot
debian/scripts/tokentube/: initramfs-tools
debian/scripts/tokentube-plugin-lua/: load_lukskey.lua
debian/scripts/tokentube-ssod/: initramfs-tools
doc/: Makefile.am  Makefile.in
doc/man/: Makefile.am  Makefile.in
doc/xml/: tokentube.1.xml  tokentube.conf.5.xml
docs/: HACKING.txt  README.txt
include/: tokentube.h
include/tokentube/: defines.h  enums.h  library.h  pba.h  plugin.h  version.h
include/tokentube/plugin/: defines.h  interface.h  plugin.h
src/bindings/: Makefile.in
src/bindings/python/: Makefile.am  Makefile.in  binding.c  binding.h  helpdesk.c  otp.c  runtime.c  user.c
src/extensions/: Makefile.am  Makefile.in
src/extensions/python/: Makefile.am  Makefile.in  extension.c  extension.h  otp.c  runtime.c  setup.py  user.c
src/extensions/python/scripts/: tokentube  tokentube.py
src/helpdesk/: .gitignore  build.xml
src/helpdesk/client/plugin/: Makefile.am  Makefile.in  plugin.c  storage-smtp.c
src/helpdesk/plugin/: Makefile.in  storage.c
src/helpdesk/res/: StripesResources.properties  displaytag.properties
src/helpdesk/server/res/: StripesResources.properties  log4j.properties
src/helpdesk/server/web/: index.jsp
src/helpdesk/server/web/css/: style.css
src/helpdesk/web/WEB-INF/: web.xml
src/helpdesk/web/WEB-INF/jsp/common/: taglibs.jsp
src/helpdesk/web/WEB-INF/jsp/otp/: delete.jsp  edit.jsp  generate.jsp  index.jsp  view.jsp
src/lib/: Makefile.am  Makefile.in  crypto-conf.c  crypto-crypt.c  crypto-oid.c  crypto.c  crypto.h  default-auth.c  default-ext2fs.c  default-helpdesk-events.c  default-helpdesk-storage.c  default-helpdesk.c  default-luks.c  default-misc.c  default-otp-helpdesk.c  default-otp-storage.c  default-otp.c  default-pba.c  default-posix.c  default-runtime.c  default-storage-ext2fs.c  default-storage-misc.c  default-storage-posix.c  default-storage.c  default-uhd-events.c  default-uhd-storage.c  default-uhd.c  default-user-events.c  default-user-hmac.c  default-user-key.c  default-user-storage.c  default-user-verifier.c  default-user.c  default.c  default.h  init.c  library.c  libtokentube.h  plugin-auth.c  plugin-database-otp.c  (+29 more)
src/pam/: Makefile.am  Makefile.in  pam_tokentube.c
src/plugins/: Makefile.am  Makefile.in
src/plugins/exec/: Makefile.am  Makefile.in  plugin.c
src/plugins/helpdesk/: Makefile.am  Makefile.in  plugin.c  plugin.h  smtp.c  storage-file.c  storage-rest.c  storage-smtp.c  storage.c
src/plugins/log/: Makefile.am  Makefile.in  plugin.c
src/plugins/lua/: Makefile.am  Makefile.in  plugin.c  plugin.h  script.c  storage.c
src/plugins/python/: Makefile.am  Makefile.in  luks.c  plugin.c  plugin.h  python.c  storage.c
src/plugins/syslog/: Makefile.am  Makefile.in  plugin.c
src/plugins/test/: Makefile.am  Makefile.in  misc.c  plugin.c  posix.c
tests/cli/: tokentube.sh
tests/cli/etc/tokentube/: tokentube.conf
tests/cli/etc/tokentube/conf.d/: plugin-exec.conf  plugin-helpdesk.conf  plugin-lua.conf  plugin-python.conf
tests/cli/etc/tokentube/conf.d/lua/: luks-loadkey.lua  storage-load.lua  storage-save.lua
tests/cli/etc/tokentube/conf.d/python/: luks-load.py  storage-load.py  storage-save.py
tests/cmocka/: Makefile.am  Makefile.in
tests/cmocka/pam/: Makefile.am  Makefile.in
tests/cmocka/pam/00_compile/: Makefile.in  test.c
tests/cmocka/pam/01_init/: Makefile.am  Makefile.in  test.c
tests/cmocka/pam/01_init/etc/tokentube/: tokentube.conf
tests/cmocka/pam/01_init/lib/: libpam.so.0.0.0
tests/cmocka/pam/02_sm_authenticate/: Makefile.in  test.c
tests/cmocka/pam/02_sm_authenticate/etc/tokentube/: tokentube.conf
tests/cmocka/pam/02_sm_authenticate/lib/: libpam.so.0  libtokentube.so.0  libtokentube.so.0.0.0
tests/cmocka/pam/03_sm_chauthtok/: Makefile.in  test.c
tests/cmocka/pam/03_sm_chauthtok/etc/tokentube/: tokentube.conf
tests/cmocka/pam/libpam/: Makefile.am  Makefile.in  pam.c
tests/cmocka/plugins/: Makefile.am  Makefile.in
tests/cmocka/plugins/00_compile/: Makefile.am  Makefile.in  main.c  test.c
tests/cmocka/plugins/01_init/: Makefile.am  Makefile.in  main.c
tests/cmocka/plugins/01_init/etc/tokentube/: tokentube.conf
tests/cmocka/plugins/02_helpdesk/: Makefile.in  test.c
tests/cmocka/plugins/02_helpdesk/etc/tokentube/: tokentube.conf
tests/pba/: boot.img  helpdesk.sh  pba.sh  ssod.sh  tokentube.sh
tests/pba/boot/tokentube/: sso.conf
tests/pba/boot/tokentube/pba/: sso.conf
tests/pba/etc/tokentube/: sso.conf  tokentube.conf
tests/pba/etc/tokentube/sso/: ssod.conf
tests/pba/usr/lib/tokentube/libexec/: ssod
(+30 files in other folders)
